--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "luxon": "^3.4.4",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
